--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-{% extends 'navbar.html' %}
+{% extends 'ajusteTable.html' %}
     
     {% block title %}CPA-Milho{% endblock %}
 
-{% block content %}
-<body class="corpo"> 
+    {% block header %}
     <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
         <img src="../static/imagens//milhoBanner.png" style="width: 100%">
             <h1 class="commo-name">Milho</h1>
     </div>
-    <!-- --------------------------Milho -------------------------- -->
-    <div class="container-prod" >
-         <div class="panel-group" id="accordion">
+
+    {% endblock %}
+
+{% block content %}
+    <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">
@@ -87,110 +88,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="ajusteDiario">
-        <h2 style="margin: 30px 0;">Ajuste do Pregão Diário</h2>
-        <form class="formAjuste" method="POST" id="formAjuste">
-            <label class="titleForm"> De:</label>
-            <input name='data1' type="date" placeholder="dd/mm/aaaa">
-            <label class="titleForm"> Até:</label>
-            <input name='data2' type="date" placeholder="dd/mm/aaaa">
-            <label class="titleForm"> Mês de Vencimento: </label>
-            <select class="formSelec">
-                <option>Todos</option>
-                <option>Janeiro</option>
-                <option>Março</option>
-                <option>Maio</option>
-                <option>Julho</option>
-                <option>Agosto</option>
-                <option>Setembro</option>
-                <option>Novembro</option>
-            </select>
-            <label class="titleForm"> Frequência: </label>
-            <select class="formSelec" id="freq" onchange="addInput()">
-                <option>Diário</option>
-                <option >Semanal</option>
-                <option >Mensal</option>
-            </select>
-             <select class="formSelec" id="semanal" style="display: none">
-                <option>Domingo</option>
-                <option>Quarta</option>
-                <option>Sábado</option>
-            </select>
-            <select class="formSelec" id="mensal" style="display: none">
-                <option>Primeiro Dia</option>
-                <option>Último Dia</option>
-            </select>
-            <button type="submit" class="btnBusca">Buscar</button>   
-        </form>
-        <table id="ajusteTable">
-            <tr>
-                <th style="text-align: center">Código</th>
-                <th style="text-align: center">Data</th>
-                <th style="text-align: center">Vencimento</th>
-                <th>Preço do Ajuste Anterior (R$)</th>
-                <th>Preço do Ajuste Atual (R$)</th>
-                <th>Variação (R$)</th>
-                <th>Valor do Ajuste por Contrato</th>
-                <th>Número de Contratos</th>
-                <th>Volume</th>
-            </tr>
-             {%for m in data%}
-                <tr>
-                    <td style="text-align: center">{{m.codigo}}</td>
-                    <td style="text-align: center">{{m.data}}</td>
-                    <td style="text-align: center">{{m.vencimento}}</td>
-                    <td>{{'{:.2f}'.format(m.ajuste_anterior)}}</td>
-                    <td>{{'{:.2f}'.format(m.ajuste_atual)}}</td>
-                    <td>{{'{:.2f}'.format(m.variacao)}}</td>
-                    <td>{{'{:.2f}'.format(m.valor_contrato)}}</td>
-                    <td>{{m.contratos}}</td>
-                    <td>{{'{:.2f}'.format(m.volume)}}</td>                
-                </tr>
-            {% endfor %}
-        </table>
-        <div id="graphDown" style="float: right">
-            <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue"> <i class='fas fa-chart-line'></i> Gráficos</button>
-            <button type="button" class="myBtn"><i class="fas fa-download"> </i> Download</button>
-        </div>
-        
-        <div class="modal fade" id="opGrafico" role="dialog">
-            <div class="modal-dialog">
-              <!-- Modal content-->
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Opções de Gráficos</h4>
-                </div>
-                <div class="modal-body">
-                    <button class="btn btn-default modBtn"> <img src="../static/imagens/line" width="35"> Gráfico de Linhas</button>
-                    <button class="btn btn-default modBtn"> <img src="../static/imagens/candlestick.png" width="35">  Gráfico de Velas</button>    
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="fechar myBtn" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
-        </div>
-    </div>    
-</div>
-</body>
-{% endblock %}
-</html>
-<script>
-    function addInput(){
-        var selec = document.getElementById("freq");
-        var freq = selec.options[ selec.selectedIndex ].value; 
-        if (freq == "Semanal"){
-            document.getElementById("semanal").style.display = 'inline';
-            document.getElementById("mensal").style.display = 'none';
-        }else if (freq == "Mensal"){
-            document.getElementById("mensal").style.display = 'inline';
-            document.getElementById("semanal").style.display = 'none';
-        }else{
-            document.getElementById("mensal").style.display = 'none';
-            document.getElementById("semanal").style.display = 'none';
-        }
-    }
+    </div>   
 
-</script>
+{% endblock %}
+
+</html>
